--- a/backend/package.json
+++ b/backend/package.json
@@ -3,14 +3,27 @@
   "packageManager": "yarn@3.2.3",
   "description": "backend project",
   "scripts": {
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon",
+    "build": ""
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.6.1",
+    "nanoid": "^3.3.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.1",
+    "@babel/node": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "nodemon": "^2.0.20"
   }
 }
