--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "packageManager": "yarn@3.2.3",
   "scripts": {
-    "dev": "yarn workspaces foreach -pAvi run dev"
+    "dev": "yarn workspaces foreach -pAvi run dev",
+    "build": "yarn workspace project run build"
   },
   "workspaces": [
     "project",
